--- a/META.yml
+++ b/META.yml
@@ -5,10 +5,10 @@ author:
 build_requires:
   File::Find: 0
   File::Temp: 0
-  Module::Build: 0.3601
-  Test::More: 0.88
+  Module::Build: 0.4001
+  Test::More: 0.98
 configure_requires:
-  Module::Build: 0.3601
+  Module::Build: 0.4001
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
 license: perl
@@ -293,6 +293,10 @@ x_Dist_Zilla:
           type: requires
       name: Prereqs
       version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::Author::KENTNL::Prereqs::Latest::Selective
+      name: Author::KENTNL::Prereqs::Latest::Selective
+      version: 0.1.0
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
