--- a/META.yml
+++ b/META.yml
@@ -51,10 +51,8 @@ resources:
   repository: https://github.com/kentfredric/Dist-Zilla-Plugin-Prereqs-DarkPAN.git
 version: 0.2.3
 x_BuiltWith:
-  failures:
-    App::Cache: 'module was not found in INC'
-    Parse::CPAN::Packages: 'module was not found in INC'
   modules:
+    App::Cache: 0.37
     Class::Load: 0.20
     Dist::Zilla::App: 5.006
     Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl: 2.002001
@@ -106,6 +104,7 @@ x_BuiltWith:
     Moose: 2.1106
     Moose::Autobox: 0.15
     Moose::Role: 2.1106
+    Parse::CPAN::Packages: 2.38
     Pod::Coverage::TrustPod: 0.100003
     Test::CPAN::Changes: 0.25
     Test::CPAN::Meta: 0.23
