--- a/dist.ini
+++ b/dist.ini
@@ -67,17 +67,17 @@ time_zone = UTC
 
 [AutoPrereqs / @Author::KENTNL/AutoPrereqs]
 
-[Prereqs / @Author::KENTNL/Prereqs/BundleDevelSuggests]
+[Prereqs / @Author::KENTNL/BundleDevelSuggests]
 -phase = develop
 -type = suggests
 Dist::Zilla::PluginBundle::Author::KENTNL::Lite = 1.3.0
 
-[Prereqs / @Author::KENTNL/Prereqs/BundleDevelRequires]
+[Prereqs / @Author::KENTNL/BundleDevelRequires]
 -phase = develop
 -type = requires
 Dist::Zilla::PluginBundle::Author::KENTNL = 1.3.0
 
-[Author::KENTNL::MinimumPerl / @Author::KENTNL/Author::KENTNL::MinimumPerl]
+[MinimumPerl / @Author::KENTNL/MinimumPerl]
 
 [Authority / @Author::KENTNL/Authority]
 :version = 1.006
@@ -95,7 +95,7 @@ type = markdown
 
 [Test::CPAN::Changes / @Author::KENTNL/Test::CPAN::Changes]
 
-[CheckExtraTests / @Author::KENTNL/CheckExtraTests]
+[RunExtraTests / @Author::KENTNL/RunExtraTests]
 
 [TestRelease / @Author::KENTNL/TestRelease]
 
@@ -104,7 +104,7 @@ type = markdown
 [Git::Check / @Author::KENTNL/Git::Check]
 filename = Changes
 
-[Git::Tag / @Author::KENTNL/Git::Tag/tag_master]
+[Git::Tag / @Author::KENTNL/tag_master]
 tag_format = %v-source
 
 [Git::Commit / @Author::KENTNL/Git::Commit]
@@ -112,7 +112,7 @@ tag_format = %v-source
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
 release_branch = releases
 
-[Git::Tag / @Author::KENTNL/Git::Tag/tag_release]
+[Git::Tag / @Author::KENTNL/tag_release]
 branch = releases
 tag_format = %v
 
@@ -142,10 +142,8 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 ;DDG.uri =  authors/id/G/GE/GETTY/DDG-0.002.tar.gz
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl = 0
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
-Dist::Zilla::Plugin::CheckExtraTests = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
@@ -164,6 +162,7 @@ Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::ModuleBuild = 0
 Dist::Zilla::Plugin::NextRelease = 0
 Dist::Zilla::Plugin::PkgVersion = 0
@@ -175,6 +174,7 @@ Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::ReadmeFromPod = 0
 Dist::Zilla::Plugin::ReportVersions::Tiny = 0
+Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
