--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,10 @@ author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric <kentnl@cpan.org>
 
-[Git::NextVersion / @Author::KENTNL/Git::NextVersion]
+[Git::NextVersion::Sanitized / @Author::KENTNL/Git::NextVersion::Sanitized]
 first_version = 0.001000
+mantissa = 6
+normal_form = normal_3
 version_regexp = ^(.*)-source$
 
 [MetaConfig / @Author::KENTNL/MetaConfig]
@@ -150,7 +152,7 @@ Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::GatherDir = 0
-Dist::Zilla::Plugin::Git::NextVersion = 0
+Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::License = 0
