--- a/dist.ini
+++ b/dist.ini
@@ -86,6 +86,7 @@ Dist::Zilla::PluginBundle::Author::KENTNL = 1.3.0
 :version = 1.006
 authority = cpan:KENTNL
 do_metadata = 1
+locate_comment = 1
 
 [ModuleBuild / @Author::KENTNL/ModuleBuild]
 
