--- a/META.yml
+++ b/META.yml
@@ -5,8 +5,10 @@ author:
 build_requires:
   Module::Build: '0.4220'
   Test::More: '1.302073'
+  perl: '5.006'
 configure_requires:
   Module::Build: '0.4220'
+  perl: '5.006'
 dynamic_config: '0'
 generated_by: 'Dist::Zilla version 6.009, CPAN::Meta::Converter version 2.150010'
 license: perl
@@ -55,10 +57,8 @@ x_BuiltWith:
     App::Cache: '0.37'
     Class::Load: '0.23'
     Dist::Zilla::App: '6.009'
-    Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl: '2.025021'
     Dist::Zilla::Plugin::Authority: '1.009'
     Dist::Zilla::Plugin::AutoPrereqs: '6.009'
-    Dist::Zilla::Plugin::CheckExtraTests: '0.029'
     Dist::Zilla::Plugin::ConfirmRelease: '6.009'
     Dist::Zilla::Plugin::EOLTests: '0.19'
     Dist::Zilla::Plugin::Git::Check: '2.041'
@@ -77,6 +77,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::MetaProvides::Package: '2.004003'
     Dist::Zilla::Plugin::MetaTests: '6.009'
     Dist::Zilla::Plugin::MetaYAML: '6.009'
+    Dist::Zilla::Plugin::MinimumPerl: '1.006'
     Dist::Zilla::Plugin::ModuleBuild: '6.009'
     Dist::Zilla::Plugin::NextRelease: '6.009'
     Dist::Zilla::Plugin::PkgVersion: '6.009'
@@ -88,6 +89,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.163250'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.35'
     Dist::Zilla::Plugin::ReportVersions::Tiny: '1.12'
+    Dist::Zilla::Plugin::RunExtraTests: '0.029'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.012'
     Dist::Zilla::Plugin::Test::Compile::PerFile: '0.004000'
     Dist::Zilla::Plugin::Test::Kwalitee: '2.12'
@@ -394,7 +396,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Prereqs:
           phase: develop
           type: suggests
-      name: '@Author::KENTNL/Prereqs/BundleDevelSuggests'
+      name: '@Author::KENTNL/BundleDevelSuggests'
       version: '6.009'
     -
       class: Dist::Zilla::Plugin::Prereqs
@@ -402,15 +404,12 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Prereqs:
           phase: develop
           type: requires
-      name: '@Author::KENTNL/Prereqs/BundleDevelRequires'
+      name: '@Author::KENTNL/BundleDevelRequires'
       version: '6.009'
     -
-      class: Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
-      config:
-        Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl:
-          fiveten: ~
-      name: '@Author::KENTNL/Author::KENTNL::MinimumPerl'
-      version: '2.025021'
+      class: Dist::Zilla::Plugin::MinimumPerl
+      name: '@Author::KENTNL/MinimumPerl'
+      version: '1.006'
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::KENTNL/Authority'
@@ -441,8 +440,11 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/Test::CPAN::Changes'
       version: '0.012'
     -
-      class: Dist::Zilla::Plugin::CheckExtraTests
-      name: '@Author::KENTNL/CheckExtraTests'
+      class: Dist::Zilla::Plugin::RunExtraTests
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: '1'
+      name: '@Author::KENTNL/RunExtraTests'
       version: '0.029'
     -
       class: Dist::Zilla::Plugin::TestRelease
@@ -483,7 +485,7 @@ x_Dist_Zilla:
           repo_root: .
         Dist::Zilla::Role::Git::StringFormatter:
           time_zone: local
-      name: '@Author::KENTNL/Git::Tag/tag_master'
+      name: '@Author::KENTNL/tag_master'
       version: '2.041'
     -
       class: Dist::Zilla::Plugin::Git::Commit
@@ -534,7 +536,7 @@ x_Dist_Zilla:
           repo_root: .
         Dist::Zilla::Role::Git::StringFormatter:
           time_zone: local
-      name: '@Author::KENTNL/Git::Tag/tag_release'
+      name: '@Author::KENTNL/tag_release'
       version: '2.041'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
