--- a/META.yml
+++ b/META.yml
@@ -65,7 +65,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::Commit: '2.041'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.041'
     Dist::Zilla::Plugin::Git::GatherDir: '2.041'
-    Dist::Zilla::Plugin::Git::NextVersion: '2.041'
+    Dist::Zilla::Plugin::Git::NextVersion::Sanitized: '0.002003'
     Dist::Zilla::Plugin::Git::Tag: '2.041'
     Dist::Zilla::Plugin::GithubMeta: '0.54'
     Dist::Zilla::Plugin::License: '6.009'
@@ -140,7 +140,7 @@ x_Dist_Zilla:
     version: '5.025010'
   plugins:
     -
-      class: Dist::Zilla::Plugin::Git::NextVersion
+      class: Dist::Zilla::Plugin::Git::NextVersion::Sanitized
       config:
         Dist::Zilla::Plugin::Git::NextVersion:
           first_version: '0.001000'
@@ -149,8 +149,12 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           'git --version': 2.11.1
           repo_root: .
-      name: '@Author::KENTNL/Git::NextVersion'
-      version: '2.041'
+        Dist::Zilla::Role::Version::Sanitize:
+          $Dist::Zilla::Role::Version::Sanitize::VERSION: '0.002003'
+          mantissa: '6'
+          normal_form: normal_3
+      name: '@Author::KENTNL/Git::NextVersion::Sanitized'
+      version: '0.002003'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
