--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,8 @@ abstract: 'Depend on things from arbitrary places-not-CPAN'
 author:
   - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: '0'
+  File::Spec: '0'
   Module::Build: '0.4220'
   Test::More: '1.302073'
   perl: '5.006'
@@ -55,6 +57,7 @@ version: 0.2.5
 x_BuiltWith:
   modules:
     App::Cache: '0.37'
+    CPAN::Meta: '2.150010'
     Class::Load: '0.23'
     Dist::Zilla::App: '6.009'
     Dist::Zilla::Plugin::Authority: '1.009'
@@ -88,13 +91,13 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Prereqs::MatchInstalled: '1.001002'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.163250'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.35'
-    Dist::Zilla::Plugin::ReportVersions::Tiny: '1.12'
     Dist::Zilla::Plugin::RunExtraTests: '0.029'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.012'
     Dist::Zilla::Plugin::Test::Compile::PerFile: '0.004000'
     Dist::Zilla::Plugin::Test::Kwalitee: '2.12'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000007'
     Dist::Zilla::Plugin::Test::Perl::Critic: '3.000'
+    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.025'
     Dist::Zilla::Plugin::TestRelease: '6.009'
     Dist::Zilla::Plugin::Twitter: '0.026'
     Dist::Zilla::Plugin::UploadToCPAN: '6.009'
@@ -102,6 +105,8 @@ x_BuiltWith:
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: '2.001001'
     Dist::Zilla::Role::Plugin: '6.009'
     English: '1.10'
+    ExtUtils::MakeMaker: '7.24'
+    File::Spec: '3.66'
     Module::Build: '0.4220'
     Moose: '2.2004'
     Moose::Autobox: '0.16'
@@ -120,7 +125,6 @@ x_BuiltWith:
     URI: '1.71'
     namespace::autoclean: '0.28'
     strict: '1.11'
-    version: '0.9917'
     warnings: '1.37'
   perl:
     original: v5.25.10
@@ -247,9 +251,9 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/PodSyntaxTests'
       version: '6.009'
     -
-      class: Dist::Zilla::Plugin::ReportVersions::Tiny
-      name: '@Author::KENTNL/ReportVersions::Tiny'
-      version: '1.12'
+      class: Dist::Zilla::Plugin::Test::ReportPrereqs
+      name: '@Author::KENTNL/Test::ReportPrereqs'
+      version: '0.025'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
       config:
