--- a/META.yml
+++ b/META.yml
@@ -60,6 +60,7 @@ x_BuiltWith:
     CPAN::Meta: '2.150010'
     Class::Load: '0.23'
     Dist::Zilla::App: '6.009'
+    Dist::Zilla::App::Command::bakeini: '0.002006'
     Dist::Zilla::Plugin::Authority: '1.009'
     Dist::Zilla::Plugin::AutoPrereqs: '6.009'
     Dist::Zilla::Plugin::ConfirmRelease: '6.009'
@@ -103,7 +104,6 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Twitter: '0.026'
     Dist::Zilla::Plugin::UploadToCPAN: '6.009'
     Dist::Zilla::PluginBundle::Author::KENTNL: '2.025021'
-    Dist::Zilla::PluginBundle::Author::KENTNL::Lite: '2.001001'
     Dist::Zilla::Role::Plugin: '6.009'
     English: '1.10'
     ExtUtils::MakeMaker: '7.24'
@@ -404,14 +404,6 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/BundleDevelSuggests'
       version: '6.009'
     -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: requires
-      name: '@Author::KENTNL/BundleDevelRequires'
-      version: '6.009'
-    -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
       version: '1.006'
@@ -615,11 +607,12 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled:
           applyto_map:
-            - 'develop.requires = develop.requires'
+            - 'develop.suggests = develop.suggests'
           applyto_phase:
             - develop
           modules:
             - Dist::Zilla::PluginBundle::Author::KENTNL
+            - Dist::Zilla::App::Command::bakeini
           source_relation: requires
           target_relation: recommends
       name: '@Author::KENTNL/always_latest_develop_bundle'
