--- a/META.yml
+++ b/META.yml
@@ -61,6 +61,7 @@ x_BuiltWith:
     Class::Load: '0.23'
     Dist::Zilla::App: '6.009'
     Dist::Zilla::App::Command::bakeini: '0.002006'
+    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.005004'
     Dist::Zilla::Plugin::Authority: '1.009'
     Dist::Zilla::Plugin::AutoPrereqs: '6.009'
     Dist::Zilla::Plugin::ConfirmRelease: '6.009'
@@ -433,6 +434,10 @@ x_Dist_Zilla:
           default_jobs: '10'
       name: '@Author::KENTNL/ModuleBuild'
       version: '6.009'
+    -
+      class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
+      name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
+      version: '0.005004'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
