--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.4220'
   perl: '5.006'
-dynamic_config: '0'
+dynamic_config: 0
 generated_by: 'Dist::Zilla version 6.009, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
@@ -55,96 +55,7 @@ resources:
   repository: https://github.com/kentnl/Dist-Zilla-Plugin-Prereqs-DarkPAN.git
 version: 0.2.5
 x_BuiltWith:
-  modules:
-    App::Cache: '0.37'
-    CPAN::Meta: '2.150010'
-    Class::Load: '0.23'
-    Dist::Zilla: '6.009'
-    Dist::Zilla::App: '6.009'
-    Dist::Zilla::App::Command::bakeini: '0.002006'
-    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.005004'
-    Dist::Zilla::Plugin::Authority: '1.009'
-    Dist::Zilla::Plugin::AutoPrereqs: '6.009'
-    Dist::Zilla::Plugin::ConfirmRelease: '6.009'
-    Dist::Zilla::Plugin::EOLTests: '0.19'
-    Dist::Zilla::Plugin::Git::Check: '2.041'
-    Dist::Zilla::Plugin::Git::Commit: '2.041'
-    Dist::Zilla::Plugin::Git::CommitBuild: '2.041'
-    Dist::Zilla::Plugin::Git::Contributors: '0.029'
-    Dist::Zilla::Plugin::Git::GatherDir: '2.041'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.004000'
-    Dist::Zilla::Plugin::Git::NextVersion::Sanitized: '0.002003'
-    Dist::Zilla::Plugin::Git::Tag: '2.041'
-    Dist::Zilla::Plugin::GithubMeta: '0.54'
-    Dist::Zilla::Plugin::License: '6.009'
-    Dist::Zilla::Plugin::Manifest: '6.009'
-    Dist::Zilla::Plugin::ManifestSkip: '6.009'
-    Dist::Zilla::Plugin::MetaConfig: '6.009'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.004005'
-    Dist::Zilla::Plugin::MetaJSON: '6.009'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.004003'
-    Dist::Zilla::Plugin::MetaTests: '6.009'
-    Dist::Zilla::Plugin::MetaYAML: '6.009'
-    Dist::Zilla::Plugin::MinimumPerl: '1.006'
-    Dist::Zilla::Plugin::ModuleBuild: '6.009'
-    Dist::Zilla::Plugin::PkgVersion: '6.009'
-    Dist::Zilla::Plugin::PodCoverageTests: '6.009'
-    Dist::Zilla::Plugin::PodSyntaxTests: '6.009'
-    Dist::Zilla::Plugin::PodWeaver: '4.008'
-    Dist::Zilla::Plugin::Prereqs: '6.009'
-    Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.006'
-    Dist::Zilla::Plugin::Prereqs::MatchInstalled: '1.001002'
-    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003002'
-    Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.163250'
-    Dist::Zilla::Plugin::ReadmeFromPod: '0.35'
-    Dist::Zilla::Plugin::RunExtraTests: '0.029'
-    Dist::Zilla::Plugin::Test::CPAN::Changes: '0.012'
-    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.004000'
-    Dist::Zilla::Plugin::Test::Kwalitee: '2.12'
-    Dist::Zilla::Plugin::Test::MinimumVersion: '2.000007'
-    Dist::Zilla::Plugin::Test::Perl::Critic: '3.000'
-    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.025'
-    Dist::Zilla::Plugin::TestRelease: '6.009'
-    Dist::Zilla::Plugin::Twitter: '0.026'
-    Dist::Zilla::Plugin::UploadToCPAN: '6.009'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.025021'
-    Dist::Zilla::Role::Plugin: '6.009'
-    English: '1.10'
-    ExtUtils::MakeMaker: '7.24'
-    File::Spec: '3.66'
-    Module::Build: '0.4220'
-    Moose: '2.2004'
-    Moose::Autobox: '0.16'
-    Moose::Role: '2.2004'
-    Parse::CPAN::Packages: '2.40'
-    Pod::Coverage::TrustPod: '0.100003'
-    Software::License::Perl_5: '0.103012'
-    Test::CPAN::Changes: '0.400002'
-    Test::CPAN::Meta: '0.25'
-    Test::EOL: '1.6'
-    Test::Kwalitee: '1.25'
-    Test::MinimumVersion: '0.101082'
-    Test::More: '1.302073'
-    Test::Pod: '1.51'
-    Test::Pod::Coverage: '1.10'
-    Try::Tiny: '0.28'
-    URI: '1.71'
-    namespace::autoclean: '0.28'
-    strict: '1.11'
-    warnings: '1.37'
-  perl:
-    original: v5.25.10
-    qv: 1
-    version:
-      - 5
-      - 25
-      - 10
-  perl-config:
-    gccversion: 5.4.0
-    myarchname: x86_64-linux
-    osname: linux
-  platform: linux
-  uname: 'Linux 4.8.5-gentoo x86_64 GenuineIntel GNU/Linux'
+  external_file: misc/built_with.json
 x_Dist_Zilla:
   perl:
     version: '5.025010'
@@ -154,7 +65,7 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Git::NextVersion:
           first_version: '0.001000'
-          version_by_branch: '0'
+          version_by_branch: 0
           version_regexp: (?^u:^(.*)-source$)
         Dist::Zilla::Role::Git::Repo:
           'git --version': 2.11.1
@@ -182,7 +93,7 @@ x_Dist_Zilla:
               class: Dist::Zilla::Plugin::FinderCode
               name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
               version: '6.009'
-          include_underscores: '0'
+          include_underscores: 0
         Dist::Zilla::Role::MetaProvider::Provider:
           $Dist::Zilla::Role::MetaProvider::Provider::VERSION: '2.002004'
           inherit_missing: '1'
@@ -210,7 +121,7 @@ x_Dist_Zilla:
               - -m
               - -i
             uname_call: uname
-          use_external_file: ~
+          use_external_file: only
       name: '@Author::KENTNL/MetaData::BuiltWith'
       version: '1.004005'
     -
@@ -218,8 +129,8 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Git::Contributors:
           'git --version': 2.11.1
-          include_authors: '0'
-          include_releaser: '0'
+          include_authors: 0
+          include_releaser: 0
           order_by: name
           paths: []
       name: '@Author::KENTNL/Git::Contributors'
@@ -233,13 +144,13 @@ x_Dist_Zilla:
             - README.mkdn
             - README.pod
           exclude_match: []
-          follow_symlinks: '0'
-          include_dotfiles: '1'
+          follow_symlinks: 0
+          include_dotfiles: 1
           prefix: ''
           prune_directory: []
           root: .
         Dist::Zilla::Plugin::Git::GatherDir:
-          include_untracked: '0'
+          include_untracked: 0
       name: '@Author::KENTNL/Git::GatherDir'
       version: '2.041'
     -
@@ -283,17 +194,16 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/Test::Kwalitee'
       version: '2.12'
     -
-      class: Dist::Zilla::Plugin::EOLTests
+      class: Dist::Zilla::Plugin::Test::EOL
       config:
         Dist::Zilla::Plugin::Test::EOL:
-          filename: xt/release/eol.t
+          filename: xt/author/eol.t
           finder:
             - ':ExecFiles'
             - ':InstallModules'
             - ':TestFiles'
-          trailing_whitespace: '1'
-          version: '0.19'
-      name: '@Author::KENTNL/EOLTests'
+          trailing_whitespace: 1
+      name: '@Author::KENTNL/Test::EOL'
       version: '0.19'
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
@@ -446,9 +356,9 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
       version: '0.005004'
     -
-      class: Dist::Zilla::Plugin::ReadmeFromPod
-      name: '@Author::KENTNL/ReadmeFromPod'
-      version: '0.35'
+      class: Dist::Zilla::Plugin::Readme::Brief
+      name: '@Author::KENTNL/ShippedReadme'
+      version: '0.003001'
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       config:
@@ -519,7 +429,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           changelog: Changes
-          signed: '0'
+          signed: 0
           tag: 0.2.5-source
           tag_format: '%v-source'
           tag_message: v%v
@@ -561,7 +471,7 @@ x_Dist_Zilla:
           branch: build/%b
           build_root: ~
           message: 'Build results of %h (on %b)'
-          multiple_inheritance: '0'
+          multiple_inheritance: 0
           release_branch: releases
           release_message: 'Build results of %h (on %b)'
         Dist::Zilla::Role::Git::Repo:
@@ -575,7 +485,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           changelog: Changes
-          signed: '0'
+          signed: 0
           tag: 0.2.5
           tag_format: '%v'
           tag_message: v%v
