--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
+  Test::DZil: '0'
   Test::More: '0'
   perl: '5.006'
 configure_requires:
